    Stella you will need a C++11 compatible compiler (Visual Studio 2013,
    Clang 3.3, gcc 4.9, Xcode 6, etc).  Eventually, this will bring more
    bug-free and (hopefully) faster code.

  * Fixed major bug with joysticks, where mapping was being lost on reset,
    the app would crash when plugging/unplugging certain sticks, etc.

  * Added dialog which shows the internal joystick database (all the
    joysticks that Stella knows about) and the ability to remove
    (currently unplugged) joysticks from this database.

  * Added preliminary support for 'WD' (Wickstead Design) bankswitching
    scheme, used for a previously unreleased prototype ROM.

  * Improved ZIP file handling, so that it now works as a normal
    filesystem does (it properly shows nested files and directories).

  * The debugger 'reset' command now does a complete system reset,
    instead of simply setting the PC to the reset vector address.

  * The 'listdelay' command now accepts a value of zero, indicating that
    list-skipping (jumping to a line in a list by keypress) is disabled.

  * The 'ctrlcombo' command now has a GUI item, allowing it to be changed
    from within the application.

  * Added 'Shift-Alt/Shift-Cmd s' keyboard shortcut, to enable continuous
    snapshot mode for each frame.  This is really only useful if you
    save snapshots in 1x mode; using it in high-resolution mode is
    not recommended.  Special thanks to SvOlli for the idea and code.

  * The minimum supported version for the OSX port is now OSX 10.7.
    Because of this, the 32-bit version is also discontinued, as 10.7
    supports 64-bit Intel only apps.

  * Updated included PNG library to latest stable version.

-Have fun!


4.1.1 to 4.2: (October 28, 2014)

  * Text input from non-US keyboard layouts is now supported.  Note that
    all text in Stella is still ASCII-only, but at least it can now be
    entered using a native layout.
